# Lab4_OOP

./: ArieDreptunghi.cpp  ArieDreptunghi.h  CMakeLists.txt  Dreptunghi.cpp  Dreptunghi.h  PerimetruDreptunghi.cpp  PerimetruDreptunghi.h  Test.cpp  Test.h  main.cpp
