cmake_minimum_required(VERSION 3.30)
project(LAB4)

set(CMAKE_CXX_STANDARD 20)

add_executable(LAB4 main.cpp
        Dreptunghi.cpp
        Dreptunghi.h
        Test.cpp
        Test.h
        ArieDreptunghi.cpp
        ArieDreptunghi.h
        PerimetruDreptunghi.cpp
        PerimetruDreptunghi.h)
